# setss2026

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_CN.md  SECURITY.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyrightconfig.json  setss2026.code-workspace
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-integration-test.yml  backend-lint.yml  backend-unit-test.yml  backend-unit-tests.yml  backend.yml  frontend-ci.yml  pr-checklist.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  test.db  test_setss.db
backend/alembic/: README  env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_users_table.py  abbcbec35d79_add_submission_review_tables.py  ff775dfc2ad3_init.py
backend/app/: __init__.py  auth.py  config.py  database.py  email_service.py  main.py  models.py  schemas.py  storage.py
backend/app/api/: __init__.py  items.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  handlers.py  logging.py  response.py  status_codes.py  storage.py
backend/app/crud/: __init__.py  crud_announcement.py  crud_paper.py  crud_registration.py  crud_review.py  crud_user.py  rebuttal.py  review.py  review_assignment.py  submission.py  submission_file.py  submission_period.py  user.py
backend/app/gateway/: __init__.py  app.py
backend/app/models/: __init__.py  item.py  rebuttal.py  review.py  review_assignment.py  submission.py  submission_file.py  submission_period.py  user.py
backend/app/routers/: admin.py  announcements.py  config_router.py  papers.py  registrations.py  reviews.py  submissions.py  users.py
backend/app/routers/admin/: periods.py  reviews.py  submissions.py  users.py
backend/app/schemas/: __init__.py  item.py  rebuttal.py  review.py  submission.py  submission_period.py  user.py
backend/docs/: response_and_error_codes.md
backend/scripts/: install-docker.sh  run_integration_tests.sh  seed_data.sql
backend/tests/: conftest.py  test_tmp_main.py  test_users.py
backend/tests/integration/: conftest.py  test_announcements_config.py  test_api_flow.py  test_health.py  test_papers.py  test_registrations.py  test_reviews.py  test_submissions.py  test_users.py
backend/tests/unit/: conftest.py  test_admin.py  test_auth.py  test_exceptions.py  test_items.py  test_response.py
docs/: architecture.md  deployment.md  development.md  requirements.md
frontend/: .env.example  .prettierignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  adminService.ts  announcements.ts  auth.ts  authService.ts  client.ts  papers.ts  registrations.ts  reviewService.ts  reviews.ts  submissionService.ts  types.ts
frontend/src/components/: AuthGuard.tsx  PageHeader.tsx  ProtectedRoute.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/data/: searchIndex.ts
frontend/src/hooks/: useAdminQuery.ts  useAuth.ts  useAuthQuery.ts  useGlobalSearch.ts  usePagination.ts  useReviewQuery.ts  useSubmissionQuery.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Accommodation.tsx  Home.tsx  (+20 more)
shared/: status_codes.py
v3/: package-lock.json
v3/app/: package-lock.json
(+72 files in other folders)
